--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ sysinfo.txt
 Assets/Scripts/OldBoard.cs
 Assets/Scripts/OldBoard.cs.meta
 Assets/Scripts/OldGame.cs
+Assets/Scripts/OldGame.cs.meta
